# hello_wayland_haskell

./: Main.hs  README.md  hello_wayland_haskell.cabal
